--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Home - Printer Form</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="EditStyles.css">
+    <link rel="stylesheet" href="editStyles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="shared-styles.css">
 </head>
@@ -52,17 +52,21 @@
                             <a href="#">Lesson Plans</a>
                         </div>
                     </li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
                     <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
-
-            <!-- upload button/div-->
-            <div id="upload-directory_container" class="background-container">
-                <button id="uploadBtn" class="upload-button"  type="button">START</button>
-            </div>
-
         </div>
+
+        <!-- upload button/div-->
+        <div id="upload-container">
+            <div class="container" style="margin-top:40px; margin-bottom: 0; background: #F1F1FD;">
+                <div class="background-container" style="background-color: transparent;">
+                    <button class="upload-button" id="uploadBtn" type="button">START</button>
+                </div>
+            </div>
+        </div>
+        
     </div>
 
     <div id = "other-forms" class="gallery">
@@ -106,6 +110,7 @@
                         <option value="" selected="selected" disabled="true">--Please Select --</option>
                         <option value="student">Student</option>
                         <option value="educator">Educator</option>
+                        <option value="other">Other</option>
                         </select>
                     </div>
                     <div>
@@ -190,15 +195,15 @@
                     <h1>|</h1>
                     <li><a href="./resource.html">Resources</a></li>
                     <h1>|</h1>
-                    <li><a href="./gallery.html">Gallery</a></li>
-                    <h1>|</h1>
+                    <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
+                        <h1 class = "gallery gallery-nav">|</h1>
                     <li><a href="./about.html">About</a></li>
                 </ul>
 
                 <ul class="footer-nav" style="text-align:center;">
-                    <li><a href="mailto:email@brown.edu">email@brown.edu</a></li>
+                    <li><a href="mailto:printerform1@gmail.com">printerform1@gmail.com</a></li>
                     <h1>|</h1>
-                    <li><a href="googlesurveylink.com">Feedback Form</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScCbfCI4AGwUjoJ6NzdIvLrkpYKWgth8RgtbY9oTs-fHyMbQw/viewform" target="_blank">Feedback Form</a></li>
                 </ul>
             </div>
 
@@ -206,8 +211,6 @@
 
     </div>
 
-
-    <script src="./viewstl/stl_viewer.min.js"></script>
     <script src="index.js"></script>
 </body>
 </html>
