--- a/how-to.html
+++ b/how-to.html
@@ -29,7 +29,7 @@
                             <a href="#">Lesson Plans</a>
                         </div>
                     </li>
-                    <li><a href="gallery.html">Gallery</a></li>
+                    <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
                     <li><a href="./about.html">About</a></li>
                 </ul>
             </nav>
@@ -51,6 +51,7 @@
                         <option value="" selected="selected" disabled="true">--Please Select --</option>
                         <option value="student">Student</option>
                         <option value="educator">Educator</option>
+                        <option value="other">Other</option>
                         </select>
                     </div>
                     <div>
@@ -77,7 +78,7 @@
 
     <!-- instructions container -->
     <div id="instructions">
-        <div class="container" style="margin:30px 10%; margin-bottom: 0; background: #F1F1FD;">
+        <div class="container" style="margin-top:40px; margin-bottom: 0; background: #F1F1FD;">
             <h1 class="title">Instructions</h1>
             <div class="text-container">
                 <div class="text-sub-container">
@@ -143,8 +144,8 @@
     </div>
 
     <!-- additional examples container -->
-    <div id="additional-examples">
-        <div class="container" style="margin:30px 10%; margin-top: 0; background: #F1F1FD;">
+    <div id="additional-examples gallery">
+        <div class="container" style="margin-top: 0; margin-bottom:40px; background: #F1F1FD;">
             <h1 class="title">Additional Examples</h1>
             <ul class="image-gallery">
                 <li class="image-gallery-item">
@@ -160,7 +161,7 @@
                     <img src="./pictures/start page/curved_sample 1.png" alt="" />
                 </li>
             </ul>
-            <a href="./gallery.html"><button class="view-more-button">View More</button></a>
+            <a class = "gallery gallery-nav" href="./gallery.html"><button class="view-more-button">View More</button></a>
             
         </div>
     </div>
@@ -178,15 +179,15 @@
                     <h1>|</h1>
                     <li><a href="./resource.html">Resources</a></li>
                     <h1>|</h1>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <h1>|</h1>
+                    <li class = "gallery gallery-nav"><a href="./gallery.html">Gallery</a></li>
+                        <h1 class = "gallery gallery-nav">|</h1>
                     <li><a href="./about.html">About</a></li>
                 </ul>
 
                 <ul class="footer-nav" style="text-align:center;">
-                    <li><a href="mailto:email@brown.edu">email@brown.edu</a></li>
+                    <li><a href="mailto:printerform1@gmail.com">printerform1@gmail.com</a></li>
                     <h1>|</h1>
-                    <li><a href="googlesurveylink.com">Feedback Form</a></li>
+                    <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScCbfCI4AGwUjoJ6NzdIvLrkpYKWgth8RgtbY9oTs-fHyMbQw/viewform" target="_blank">Feedback Form</a></li>
                 </ul>
             </div>
 
