edited lesson and activity 1

--- a/Web Page1.0/activity-a.html
+++ b/Web Page1.0/activity-a.html
@@ -38,34 +38,21 @@
     <!-- activity -->
     <div id="education-resources">
         <div class="container" style="margin:30px 10%; margin-bottom: 0; background: rgba(255, 217, 211, 0.50);">
-            <h1 class="title" style="text-align:center;">ACTIVITY A - Modeling Simple Shapes </h1>
+            <h1 class="title" style="text-align:center;">ACTIVITY A - Dream Island with Printerform</h1>
             <div class="text-container">
                 <div class="activity-text-sub-container">
-                    <h2 class="activity-sub-title">Activity Brief:</h2>
-                    <p class="activity-text">Explore a new CAD Modeling program by creating multiple simple
-                        shapes such as sphere, cube, pyramid,etc.
-                    </p>
-                </div>
-                <div class="activity-text-sub-container">
-                    <h2 class="activity-sub-title">PrinterForm:</h2>
-                    <p class="activity-text">Play around with what printing form best fits your CAD shape.
-                        (curved form, rectangle form, etc).
-                    </p>
-                </div>
-                <div class="activity-text-sub-container">
                     <h2 class="activity-sub-title">Objective:</h2>
-                    <p class="activity-text">A simple introduction to 3D modeling and how PrinterForm can help
-                        transform digital 3D models into real life prototypes (without 3D printing).
+                    <p class="activity-text">Encourage students to explore printing different patterns and designs using Printerform with adjustment, as well as experimenting with different forms.
                     </p>
                 </div>
                 <div class="activity-text-sub-container">
                     <h2 class="activity-sub-title">Target Age Group:</h2>
-                    <p class="activity-text">Upper Elementary School
+                    <p class="activity-text">Elementary School
                     </p>
                 </div>
                 <div class="activity-text-sub-container">
-                    <h2 class="activity-sub-title">Recommended Tools:</h2>
-                    <p class="activity-text">Try using TinkerCAD or Fusion360 to model your 3D shapes.
+                    <h2 class="activity-sub-title">Materials/Tools:</h2>
+                    <p class="activity-text">Printer, standard 8.5” x 11” paper, glue/stapler, color crayon/pencil/marker, (optional) scissor
                     </p>
                 </div>
                 <div class="activity-text-sub-container">
@@ -87,37 +74,64 @@
             <h1 class="title">Instructions</h1>
             <div class="text-container">
                 <div class="text-sub-container">
-                    <h2 class="instructions-sub-title">Step 1 - CREATE</h2>
-                    <p class="instructions-text"> Create simple 3D shapes using a CAD modeling software experiment with
-                        different tools.
-                        You can try making a sphere, cube, pyramid, etc.
-                    </p>
+                    <h2 class="instructions-sub-title">STEP 1 - INTRODUCTION</h2>
+                    <div class="instructions-text"> 
+                        <ol class="list">
+                            <li>Explain what Printerform does and how it works
+                                <ul class="instructions-text list">
+                                    <li>Quick demonstration of the printing Process </li>
+                                    <li>Talk about consideration in choosing different shapes</li>
+                                    <li>Explain what each adjustment does</li>
+                                </ul>
+                            </li>
+                            <li>Introduce the activity: create your dream island with Printerform!
+                            </li>
+                        </ol>
+                    </div>
                 </div>
 
                 <div class="text-sub-container">
-                    <h2 class="instructions-sub-title">Step 2 - MODIFY</h2>
-                    <p class="instructions-text">Modify your modeled shapes until you find the one you're ready to
-                        print.
-                        Make sure its a solid for and able to be exported as a .STL file type.
-                    </p>
+                    <h2 class="instructions-sub-title">STEP 2 - GATHER STL FILES</h2>
+                    <div class="instructions-text"> 
+                        <ol class="list">
+                            <li>Supply students with various STL files of houses, animals, etc, OR
+                            </li>
+                            <li>Instruct students to create their own STL files or explore existing ones, using platforms such as TinkerCad
+                            </li>
+                        </ol>
+                    </div>
                 </div>
                 <div class="text-sub-container">
-                    <h2 class="instructions-sub-title">Step 3 - UPLOAD</h2>
-                    <p class="instructions-text">Upload your .STL file to PrinterForm and choose which print
-                        template best suites your shape. Look at how many sides and what geometry best matches your
-                        form.
-                    </p>
+                    <h2 class="instructions-sub-title">STEP 3 - PRINTERFORM WALKTHROUGH</h2>
+                    <div class="instructions-text"> 
+                        <ol class="list">
+                            <li>Lead students to go through the entire Printerform process
+                                <ul class="instructions-text list">
+                                    <li>Upload</li>
+                                    <li>Choose shape</li>
+                                    <li>experiment with positioning, rotating, angling, and adjusting each STL file</li>
+                                    <li>Download</li>
+                                </ul>
+                            </li>
+                            <li>After students have downloaded all of their files, print using standard 8.5” x 11” paper</li>
+                        </ol>
+                    </div>
                 </div>
                 <div class="text-sub-container">
-                    <h2 class="instructions-sub-title">Step 4 - PRINT & FOLD</h2>
-                    <p class="instructions-text">Using standard 8.5” x 11” paper print your form on its corresponding
-                        template then follow the dotted lines and printed direction to fold and create your printed
-                        prototype.
-                    </p>
+                    <h2 class="instructions-sub-title">STEP 4 - ASSEMBLE</h2>
+                    <div class="instructions-text"> 
+                        <ol class="list">
+                            <li>Ensure students follow the dotted lines and printed direction to fold and create printed
+                                prototype</li>
+                            <li>Use glue/stapler to stablize the prototype</li>
+                            <li>Color the prototypes with color crayon/pencil/marker</li>
+                            <li>Let students arrange the prototypes into their dream islands!</li>
+                        </ol>
+                    </div>
                 </div>
                 <div class="text-sub-container">
-                    <h2 class="instructions-sub-title">Step 5 - SHARE YOUR WORK </h2>
-                    <p class="instructions-text">Upload an image of your finished printed file to our gallery
+                    <h2 class="instructions-sub-title">STEP 5 - SHARE YOUR WORK </h2>
+                    <p class="instructions-text unlisted">Upload images of finished printed file to our gallery
                         page and help us further develop this tool by providing your feedback at this PrinterForm
                         Survey.
                     </p>
