--- a/Web Page1.0/resource.html
+++ b/Web Page1.0/resource.html
@@ -106,17 +106,12 @@
                     <a class="image-gallery-item" href="./activity-a.html">
                         <img src="./pictures/start page/ActivityA.png" alt="" />
                     </a>
-                    <a class="image-gallery-item" href="./activity-a.html">
-                        <img src="./pictures/start page/ActivityB.png" alt="" />
                     </a>
-                    <a class="image-gallery-item incomplete-lesson">
-                        <img src="./pictures/start page/ActivityC.png" alt="" />
-                    </a>
-                    <a class="image-gallery-item incomplete-lesson">
-                        <img src="./pictures/start page/ActivityD.png" alt="" />
+                    <a class="image-gallery-item" href="./lesson-a.html">
+                        <img src="./pictures/start page/LessonA.png" alt="" />
                     </a>
                 </div>
-
+                <!--
                 <div class="image-gallery-row">
                     <a class="image-gallery-item" href="./lesson-a.html">
                         <img src="./pictures/start page/LessonA.png" alt="" />
@@ -131,6 +126,7 @@
                         <img src="./pictures/start page/LessonD.png" alt="" />
                     </a>
                 </div>
+                -->
             </div>
         </div>
     </div>
